# tinyrenderer_study

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: line_algorithms.h  tgaimage.h
src/: line_algorithms.cpp  main.cpp  tgaimage.cpp
